# healthcare-ml-project

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt  wget-log
airflow/: airflow.db-shm  airflow.db-wal  simple_auth_manager_passwords.json.generated
airflow/dags/: retrain_dag.py
app/: main.py  model_loader.py  routes.py  schemas.py  utils.py
database/: db_connection.py
frontend/: index.html
ml/: evaluate.py  preprocess.py  train.py
models/: metadata.json
scripts/: clean.py  ingest.py  load.py  startup.py
